5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1585_1017.log
== TEST (2019-03-24 12:36:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Latitude de l1: ")))
g2 = radians(float(input("Latitude de l2: ")))
r=6371.01
from math import*
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(d)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:37:23) 
-- CODE:
from math import*
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Latitude de l1: ")))
g2 = radians(float(input("Latitude de l2: ")))
r=6371.01
print(d)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v1=sin(t1)
NameError: name 't1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:41:10) 
-- CODE:
t1 = float(input("Latitude de P1: "))
t2 = float(input("Latitude de P2: "))
g1 = float(input("Latitude de l1: "))
g2 = float(input("Latitude de l2: "))
r=6371.01
from math import*
v1=sin(radians(t1))
v2=sin(radians(t2))
v3=cos(radians(t1))
v4=cos(radians(t2))
v5=cos(radians(g1-g2))
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(round(d,2)




-- ERROR:
File "XXXX", line 18
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:41:18) 
-- CODE:
t1 = float(input("Latitude de P1: "))
t2 = float(input("Latitude de P2: "))
g1 = float(input("Latitude de l1: "))
g2 = float(input("Latitude de l2: "))
r=6371.01
from math import*
v1=sin(radians(t1))
v2=sin(radians(t2))
v3=cos(radians(t1))
v4=cos(radians(t2))
v5=cos(radians(g1-g2))
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(round(d,2)




-- ERROR:
File "XXXX", line 18
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:41:20) 
-- CODE:
t1 = float(input("Latitude de P1: "))
t2 = float(input("Latitude de P2: "))
g1 = float(input("Latitude de l1: "))
g2 = float(input("Latitude de l2: "))
r=6371.01
from math import*
v1=sin(radians(t1))
v2=sin(radians(t2))
v3=cos(radians(t1))
v4=cos(radians(t2))
v5=cos(radians(g1-g2))
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(round(d,2)




-- ERROR:
File "XXXX", line 18
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:41:40) 
-- CODE:
t1 = float(input("Latitude de P1: "))
t2 = float(input("Latitude de P2: "))
g1 = float(input("Latitude de l1: "))
g2 = float(input("Latitude de l2: "))
r=6371.01
from math import*
v1=sin(radians(t1))
v2=sin(radians(t2))
v3=cos(radians(t1))
v4=cos(radians(t2))
v5=cos(radians(g1-g2))
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(round(d,2)
-- ERROR:
File "XXXX", line 15
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:42:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Latitude de l1: ")))
g2 = radians(float(input("Latitude de l2: ")))
r=6371.01
from math import*
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(round(d,2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:42:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Latitude de l1: ")))
g2 = radians(float(input("Latitude de l2: ")))
print(round(d,2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v1=sin(t1)
NameError: name 't1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:43:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Latitude de l1: ")))
g2 = radians(float(input("Latitude de l2: ")))
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(round(d,2))




-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:47:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Latitude de l1: ")))
g2 = radians(float(input("Latitude de l2: ")))
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
print(round(d,2))




-- EXECUTION TIME:
0.146508
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:31:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
result=(round(d,2))
print (degrees(result))



-- OUTPUT:
454086.24137503136
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 14:31:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
result=(round(d,2))
print (degrees(result))



-- EXECUTION TIME:
0.1558
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
454086.24137503136
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 14:32:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
v1=sin(t1)
v2=sin(t2)
v3=cos(t1)
v4=cos(t2)
v5=cos(g1-g2)
v6=acos((v1*v2+v3*v4*v5))
d=v6*r
result=(round(d,2))
print (degrees(result))



-- EXECUTION TIME:
0.186548
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
454086.24137503136
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:42:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(((sin(t1)*sin(t2))+(cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))



-- ERROR:
File "XXXX", line 11
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:42:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(((sin(t1)*sin(t2))+(cos(t1)*cos(t2)*cos(g1-g2)))
print (d)



-- ERROR:
File "XXXX", line 11
    print (d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:43:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(((sin(t1)*sin(t2))+(cos(t1)*cos(t2)*cos(g1-g2)))



-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:43:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(((sin(t1)*sin(t2))+(cos(t1)*cos(t2)*cos(g1-g2)))



-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:43:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(((sin(t1)*sin(t2))+(cos(t1)*cos(t2)*cos(g1-g2)))
-- ERROR:
File "XXXX", line 11
    
                                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:44:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
-- ERROR:
File "XXXX", line 11
    
                                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:44:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 14:44:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371.01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.154508
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:46:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371,01
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- ERROR:
File "XXXX", line 4
    r=6371,01
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:46:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371,0
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- OUTPUT:
1.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 14:46:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r=6371,0
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de p1: ")))
g2 = radians(float(input("Longitude de p2: ")))
d=acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.26649
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
1.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 15:12:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de p1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de p2: ")))
r=6371.01
d=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.184399
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
